refactor(MultiSelect): rename MultiSelectNew to MultiSelect, remove old MultiSelect

--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -3,7 +3,7 @@
 @import "forms/form-control";
 @import "forms/form-select";
 @import "forms/form-multi-select";
-@import "forms/form-multi-select-new";
+// @import "forms/form-multi-select-new";
 @import "forms/form-check";
 @import "forms/form-range";
 @import "forms/floating-labels";
